Make footer icons smaller on screens < 400 pixels to avoid wrapping

--- a/app/assets/stylesheets/strips.scss
+++ b/app/assets/stylesheets/strips.scss
@@ -505,6 +505,9 @@ footer {
     font-size: 16px;
     margin: 0px 15px;
     padding: 15px 0px 16px;
+    img {
+      width: 50px;
+    }
   }
   p {
     font-size: 13px;
@@ -519,8 +522,5 @@ footer {
 .socialMediaLinks {
   margin-top: 30px;
   margin-bottom: 10px;
-}
-.bottom_Logo {
-  width: 50px;
 }
 @import "mediaQueries"
